==> SynergyTeam/T02/Drivers/spi/SPITivaDMA.c <==
#include <stdint.h>
#include "stm32f4xx_hal.h"
#include <Drivers/driver_logs.h>
#include <Drivers/spi/SPITivaDMA.h>
#include "FreeRTOS.h"
#include "semphr.h"

void SPITivaDMA_close(SPI_Handle handle)
{
    SPITivaDMA_Object          *object = handle->object;
    SPIDMA_HWAttrs const   *hwAttrs = handle->hwAttrs;

    __HAL_SPI_DISABLE(hwAttrs);

    /* De-Initialize the DMA associated to transmission process */
    HAL_DMA_DeInit(object->hdmatx);
    vPortFree(object->hdmatx);

    /* De-Initialize the DMA associated to reception process */
    HAL_DMA_DeInit(object->hdmarx);
    vPortFree(object->hdmarx);

    /* Destroy the Hwi */
    /*##-4- Disable the NVIC for DMA #########################################*/
    HAL_NVIC_DisableIRQ(hwAttrs->uDMA_txChnl);
    HAL_NVIC_DisableIRQ(hwAttrs->uDMA_rxInt);

    /*##-5- Disable the NVIC for SPI #########################################*/
    HAL_NVIC_DisableIRQ(hwAttrs->intNum);

    /* Destroy the semaphore */
    vSemaphoreDelete(object->transferComplete);

    Log_print1(Diags_USER1, "SPI:(%p) closed", hwAttrs->Instance);

    object->isOpen = false;
}

bool SPITivaDMA_configDMA(SPI_Handle handle, SPI_Transaction *transaction)
{
    void                      *buf;
    uint32_t                   channelControlOptions;
    SPITivaDMA_Object         *object = handle->object;
    SPIDMA_HWAttrs const  *hwAttrs = handle->hwAttrs;

    if (transaction->txBuf) {
        channelControlOptions = dmaTxConfig[object->frameSize];
        buf = transaction->txBuf;
    }
    else {
        channelControlOptions = dmaNullConfig[object->frameSize];
        channelControlOptions |= DMA_PERIPH_TO_MEMORY;
        *hwAttrs->scratchBufPtr = hwAttrs->defaultTxBufValue;
        buf = hwAttrs->scratchBufPtr;
    }

    /* Setup the TX transfer characteristics */
    uDMAChannelControlSet(object->hdmatx, channelControlOptions);
    object->hdmatx->XferHalfCpltCallback = NULL;
    object->hdmatx->XferCpltCallback     = NULL;
    object->hdmatx->XferErrorCallback    = NULL;
    object->hdmatx->XferAbortCallback    = NULL;

    /* Enable the Tx DMA Stream */
    HAL_DMA_Start_IT(object->hdmatx, (uint32_t)buf, (uint32_t)&hwAttrs->Instance->DR, transaction->count);

    if (transaction->rxBuf) {
        channelControlOptions = dmaRxConfig[object->frameSize];
        buf = transaction->rxBuf;
    }
    else {
        channelControlOptions = dmaNullConfig[object->frameSize];
        channelControlOptions |= DMA_MEMORY_TO_PERIPH;
        buf = hwAttrs->scratchBufPtr;
    }

    /* Setup the RX transfer characteristics */
    uDMAChannelControlSet(object->hdmarx, channelControlOptions);
    object->hdmarx->XferHalfCpltCallback = NULL;
    object->hdmarx->XferCpltCallback = SPITivaDMA_transferCallback;             //FIXME
    /* Set the DMA error callback */
    object->hdmarx->XferErrorCallback = SPI_DMAError;
    /* Set the DMA AbortCpltCallback */
    object->hdmarx->XferAbortCallback = NULL;

    /* Setup the RX transfer buffers */
    HAL_DMA_Start_IT(object->hdmarx, (uint32_t)&hwAttrs->Instance->DR, (uint32_t)buf, transaction->count);

    Log_print1(Diags_USER1,"SPI:(%p) DMA transfer enabled", hwAttrs->Instance);

    Log_print5(Diags_USER2,"SPI:(%p) DMA transaction: %p, "
                           "rxBuf: %p; txBuf: %p; Count: %d",
                            hwAttrs->Instance,
                            (UArg)transaction,
                            (UArg)transaction->rxBuf,
                            (UArg)transaction->txBuf,
                            (UArg)transaction->count);

    /* Enable Rx DMA Request */
    SET_BIT(hwAttrs->Instance->CR2, SPI_CR2_RXDMAEN);

    /* Check if the SPI is already enabled */
    if((hwAttrs->Instance->CR1 &SPI_CR1_SPE) != SPI_CR1_SPE) {
      /* Enable SPI peripheral */
      __HAL_SPI_ENABLE(hwAttrs);
    }
    /* Enable the SPI Error Interrupt Bit */
    SET_BIT(hwAttrs->Instance->CR2, SPI_CR2_ERRIE);

    /* Enable Tx DMA Request */
    SET_BIT(hwAttrs->Instance->CR2, SPI_CR2_TXDMAEN);
    return (true);
}

SPI_Handle SPITivaDMA_open(SPI_Handle handle, SPI_Params *params, uint32_t clock)
{
    SPITivaDMA_Object *object = handle->object;
    SPIDMA_HWAttrs const *hwAttrs = handle->hwAttrs;

    /* Determine if the device index was already opened */
    if (object->isOpen == true) {
        return (NULL);
    }

    /* Mark the handle as being used */
    object->isOpen = true;

    /* Store the SPI parameters */
    if (params == NULL) {
        /* No params passed in, so use the defaults */
        params = (SPI_Params *) &SPI_defaultParams;
    }

    assert_param((params->dataSize >= 4) && (params->dataSize <= 16));          //FIXME

    /* Determine if we need to use an 8-bit or 16-bit framesize for the DMA */
    object->frameSize = (params->dataSize < 9) ? SPITivaDMA_8bit : SPITivaDMA_16bit;

    Log_print2(Diags_USER2,"SPI:(%p) DMA buffer incrementation size: %s",
                            hwAttrs->Instance,
                           (object->frameSize) ? (UArg)"16-bit" : (UArg)"8-bit");

    /* Store the current mode */
    object->transferMode = params->transferMode;
    object->transaction = NULL;

    /*
     * Create a semaphore to block task execution for the duration of the SPI transfer
     */
    object->transferComplete = xSemaphoreCreateBinary();

    if (object->transferMode == SPI_MODE_BLOCKING) {
        Log_print1(Diags_USER2, "SPI:(%p) in SPI_MODE_BLOCKING mode", hwAttrs->Instance);
        /* Store internal callback function */
        object->transferCallbackFxn = SPITivaDMA_transferCallback;
    }
    else {
        Log_print1(Diags_USER2, "SPI:(%p) in SPI_MODE_CALLBACK mode", hwAttrs->Instance);

        /* Check to see if a callback function was defined for async mode */
        assert_param(params->transferCallbackFxn != NULL);

        /* Save the callback function pointer */
        object->transferCallbackFxn = params->transferCallbackFxn;
    }

    /* Disable the selected SPI peripheral */
    __HAL_SPI_DISABLE(hwAttrs);

    /* SPIx CR1 & CR2 Configuration */
    /* Configure : SPI Mode, Communication Mode, Data size, Clock polarity and phase, NSS management,
    Communication speed, First bit and CRC calculation state */
    WRITE_REG(hwAttrs->Instance->CR1, (params->mode | SPI_DIRECTION_2LINES | params->dataSize |
                                       params->frameFormat | (params->nss & SPI_CR1_SSM) |
                                       params->bitRate | params->firstBit  | SPI_CRCCALCULATION_DISABLE) );

    /* Configure : NSS management */
    WRITE_REG(hwAttrs->Instance->CR2, (((params->nss >> 16U) & SPI_CR2_SSOE) | SPI_TIMODE_DISABLE));

    /* Activate the SPI mode (Make sure that I2SMOD bit in I2SCFGR register is reset) */
    CLEAR_BIT(hwAttrs->Instance->I2SCFGR, SPI_I2SCFGR_I2SMOD);

    Log_print3(Diags_USER1, "SPI:(%p) CPU freq: %d; SPI freq to %d",
                             hwAttrs->Instance, freq.lo, params->bitRate);

    object->hdmatx = pvPortMalloc(sizeof(DMA_HandleTypeDef));
    /* Configure the DMA handler for Transmission process */
    object->hdmatx->Instance = (DMA_Stream_TypeDef*)hwAttrs->uDMA_txStream;
    object->hdmatx->Init.Channel = hwAttrs->uDMA_txChnl;
    object->hdmatx->Parent = handle;

    object->hdmarx = pvPortMalloc(sizeof(DMA_HandleTypeDef));
    /* Configure the DMA handler for Transmission process */
    object->hdmarx->Instance = (DMA_Stream_TypeDef*)hwAttrs->uDMA_rxStream;;
    object->hdmarx->Init.Channel = hwAttrs->uDMA_rxChnl;
    object->hdmarx->Parent = handle;

    /*##-3- Configure the NVIC for SPI #######################################*/
    /* NVIC for SPI */
    HAL_NVIC_SetPriority(hwAttrs->intNum, 1, 0);
    HAL_NVIC_EnableIRQ(hwAttrs->intNum);

    /*##-4- Configure the NVIC for DMA #######################################*/
    /* NVIC configuration for DMA transfer complete interrupt (SPI2_TX) */
    HAL_NVIC_SetPriority(hwAttrs->uDMA_txInt, 1, 1);
    HAL_NVIC_EnableIRQ(hwAttrs->uDMA_txInt);

    /* NVIC configuration for DMA transfer complete interrupt (SPI2_RX) */
    HAL_NVIC_SetPriority(hwAttrs->uDMA_rxInt, 1, 0);
    HAL_NVIC_EnableIRQ(hwAttrs->uDMA_rxInt);

    /*##-5- Configure the NVIC for SPI #######################################*/
    HAL_NVIC_SetPriority(hwAttrs->intNum, 1, 2);
    HAL_NVIC_EnableIRQ(hwAttrs->intNum);

    Log_print1(Diags_USER1, "SPI:(%p) opened", hwAttrs->Instance);

    return (handle);
}

bool SPITivaDMA_transfer(SPI_Handle handle, SPI_Transaction *transaction)
{
    SPITivaDMA_Object         *object = handle->object;
    SPIDMA_HWAttrs const  *hwattrs = handle->hwAttrs;

    /* Check the transaction arguments */
    if ((transaction->count == 0) || (transaction->count > 1024) ||
       !(transaction->rxBuf || transaction->txBuf) ||
      (!(transaction->rxBuf && transaction->txBuf) && !hwattrs->scratchBufPtr)) {
        return (false);
    }

    /* Make sure that the buffers are aligned properly */
    if (object->frameSize == SPITivaDMA_16bit) {
        assert_param(!((uint32_t)transaction->txBuf & 0x1));
        assert_param(!((uint32_t)transaction->rxBuf & 0x1));
    }

    /* Check if a transfer is in progress */
//    MAP_IntDisable(hwattrs->intNum);
    if (object->transaction) {
//        MAP_IntEnable(hwattrs->intNum);

        Log_error1("SPI:(%p) transaction still in progress",
                   hwattrs->Instance);

        /* Transfer is in progress */
        return (false);
    }
    else {
        /* Save the pointer to the transaction */
        object->transaction = transaction;
    }
//    MAP_IntEnable(hwattrs->intNum);

    SPITivaDMA_configDMA(handle, transaction);

    if (object->transferMode == SPI_MODE_BLOCKING) {
        Log_print1(Diags_USER1,
                   "SPI:(%p) transfer pending on transferComplete semaphore",
                    hwattrs->Instance);
        xSemaphoreTake(object->transferComplete, portMAX_DELAY);
    }

    return (true);
}

static void SPITivaDMA_transferCallback(SPI_Handle handle,
                                        SPI_Transaction *transaction)
{
    SPITivaDMA_Object *object = handle->object;
    BaseType_t TaskWoken = pdFALSE;

    Log_print1(Diags_USER1, "SPI:(%p) posting transferComplete semaphore",
                ((SPIDMA_HWAttrs const *)(handle->hwAttrs))->Instance);

     xSemaphoreGiveFromISR(object->transferComplete, &TaskWoken);
}
