==> DemonTu/ALL_SmartBatterySwitch_CC2640/tirtos_simplelink_2_13_00_06/packages/ti/drivers/spi/SPITivaDMA.c <==
#include <stdint.h>
#include <xdc/runtime/Error.h>
#include <xdc/runtime/Assert.h>
#include <xdc/runtime/Diags.h>
#include <xdc/runtime/Log.h>
#include <xdc/runtime/System.h>
#include <xdc/runtime/Types.h>
#include <ti/drivers/spi/SPITivaDMA.h>
#include <ti/sysbios/BIOS.h>
#include <ti/sysbios/knl/Semaphore.h>
#include <ti/sysbios/family/arm/m3/Hwi.h>
#include <inc/hw_memmap.h>
#include <inc/hw_types.h>
#include <inc/hw_ssi.h>
#include <driverlib/ssi.h>
#include <driverlib/udma.h>
#include <driverlib/sysctl.h>
#define SSIMODE(baseAddr) HWREG(baseAddr + SSI_O_PP) & (SSI_PP_MODE_M)

void SPITivaDMA_close(SPI_Handle handle)
{
    unsigned int                key;
    SPITivaDMA_Object          *object = handle->object;
    SPITivaDMA_HWAttrs const   *hwAttrs = handle->hwAttrs;

    SSIDisable(hwAttrs->baseAddr);
    uDMAChannelDisable(hwAttrs->txChannelIndex);
    uDMAChannelDisable(hwAttrs->rxChannelIndex);

    /* Destroy the Hwi */
    Hwi_destruct(&(object->hwi));

    if (object->transferMode == SPI_MODE_BLOCKING) {
        Semaphore_destruct(&(object->transferComplete));
    }

    Log_print1(Diags_USER1, "SPI:(%p) closed", hwAttrs->baseAddr);

    key = Hwi_disable();
    object->isOpen = false;
    Hwi_restore(key);
}

static void SPITivaDMA_configDMA(SPI_Handle handle, SPI_Transaction *transaction)
{
    SPIDataType                dummy;
    unsigned int               key;
    void                      *buf;
    uint32_t                   channelControlOptions;
    SPITivaDMA_Object         *object = handle->object;
    SPITivaDMA_HWAttrs const  *hwAttrs = handle->hwAttrs;

    /* Clear out the FIFO */
    while (SSIDataGetNonBlocking(hwAttrs->baseAddr, &dummy)) {
    }

    if (transaction->txBuf) {
        channelControlOptions = dmaTxConfig[object->frameSize];
        buf = transaction->txBuf;
    }
    else {
        channelControlOptions = dmaNullConfig[object->frameSize];
        *hwAttrs->scratchBufPtr = hwAttrs->defaultTxBufValue;
        buf = hwAttrs->scratchBufPtr;
    }

    /* Setup the TX transfer characteristics */
    uDMAChannelControlSet(hwAttrs->txChannelIndex | UDMA_PRI_SELECT,
                          channelControlOptions);

    /* Setup the TX transfer buffers */
    uDMAChannelTransferSet(hwAttrs->txChannelIndex | UDMA_PRI_SELECT,
                           UDMA_MODE_BASIC,
                           buf,
                           (void *)(hwAttrs->baseAddr + SSI_O_DR),
                           transaction->count);

    if (transaction->rxBuf) {
        channelControlOptions = dmaRxConfig[object->frameSize];
        buf = transaction->rxBuf;
    }
    else {
        channelControlOptions = dmaNullConfig[object->frameSize];
        buf = hwAttrs->scratchBufPtr;
    }

    /* Setup the RX transfer characteristics */
    uDMAChannelControlSet(hwAttrs->rxChannelIndex | UDMA_PRI_SELECT,
                          channelControlOptions);

    /* Setup the RX transfer buffers */
    uDMAChannelTransferSet(hwAttrs->rxChannelIndex | UDMA_PRI_SELECT,
                           UDMA_MODE_BASIC,
                           (void *)(hwAttrs->baseAddr + SSI_O_DR),
                           buf,
                           transaction->count);

    Log_print1(Diags_USER1,"SPI:(%p) DMA transfer enabled", hwAttrs->baseAddr);

    Log_print5(Diags_USER2,"SPI:(%p) DMA transaction: %p, "
                           "rxBuf: %p; txBuf: %p; Count: %d",
                            hwAttrs->baseAddr,
                            (UArg)transaction,
                            (UArg)transaction->rxBuf,
                            (UArg)transaction->txBuf,
                            (UArg)transaction->count);

    /* A lock is needed because we are accessing shared uDMA registers.*/
    key = Hwi_disable();

    /* Configure channel mapping */
    hwAttrs->channelMappingFxn(hwAttrs->txChannelMappingFxnArg);
    hwAttrs->channelMappingFxn(hwAttrs->rxChannelMappingFxnArg);

    /* Enable DMA Channels */
    uDMAChannelEnable(hwAttrs->txChannelIndex);
    uDMAChannelEnable(hwAttrs->rxChannelIndex);

    Hwi_restore(key);

#if !defined(MWARE) /* Not supported on Concerto devices */
    if (SSIMODE(hwAttrs->baseAddr)) {
        SSIIntClear(hwAttrs->baseAddr, SSI_DMARX);
        SSIIntEnable(hwAttrs->baseAddr, SSI_DMARX);
    }
#endif
}

SPI_Handle SPITivaDMA_open(SPI_Handle handle, SPI_Params *params)
{
    unsigned int               key;
    SPITivaDMA_Object         *object = handle->object;
    SPITivaDMA_HWAttrs const  *hwAttrs = handle->hwAttrs;
    union {
        Semaphore_Params       semParams;
        Hwi_Params             hwiParams;
    } paramsUnion;

    /* Determine if the device index was already opened */
    key = Hwi_disable();
    if (object->isOpen == true) {
        Hwi_restore(key);
        return (NULL);
    }

    /* Mark the handle as being used */
    object->isOpen = true;
    Hwi_restore(key);

    /* Store the SPI parameters */
    if (params == NULL) {
        /* No params passed in, so use the defaults */
        params = (SPI_Params *) &SPI_defaultParams;
    }

    Assert_isTrue((params->dataSize >= 4) &&
                  (params->dataSize <= 16), NULL);

    /* Determine if we need to use an 8-bit or 16-bit framesize for the DMA */
    object->frameSize = (params->dataSize < 9) ? SPITivaDMA_8bit : SPITivaDMA_16bit;

    Log_print2(Diags_USER2,"SPI:(%p) DMA buffer incrementation size: %s",
                            hwAttrs->baseAddr,
                           (object->frameSize) ? (UArg)"16-bit" : (UArg)"8-bit");

    SSIIntDisable(hwAttrs->baseAddr, SSI_RXOR | SSI_RXFF | SSI_RXTO | SSI_TXFF);

#if !defined(MWARE)
    if (SSIMODE(hwAttrs->baseAddr)) {
        SSIIntDisable(hwAttrs->baseAddr, SSI_DMARX);
    }
#endif

    Hwi_clearInterrupt(hwAttrs->intNum);

    /* Create the Hwi for this SPI peripheral */
    Hwi_Params_init(&(paramsUnion.hwiParams));
    paramsUnion.hwiParams.arg = (UArg)handle;
    paramsUnion.hwiParams.priority = hwAttrs->intPriority;
    Hwi_construct(&(object->hwi), hwAttrs->intNum, SPITivaDMA_hwiFxn,
                  &(paramsUnion.hwiParams), NULL);

    /* Store the current mode */
    object->transferMode = params->transferMode;
    object->transaction = NULL;

    if (object->transferMode == SPI_MODE_BLOCKING) {
        Log_print1(Diags_USER2, "SPI:(%p) in SPI_MODE_BLOCKING mode",
                                 hwAttrs->baseAddr);
        /*
         * Create a semaphore to block task execution for the duration of the
         * SPI transfer
         */
        Semaphore_Params_init(&(paramsUnion.semParams));
        paramsUnion.semParams.mode = Semaphore_Mode_BINARY;
        Semaphore_construct(&(object->transferComplete), 0,
                            &(paramsUnion.semParams));

        /* Store internal callback function */
        object->transferCallbackFxn = SPITivaDMA_transferCallback;

        /* Store SPI transfer timeout */
        object->transferTimeout = params->transferTimeout;
    }
    else {
        Log_print1(Diags_USER2, "SPI:(%p) in SPI_MODE_CALLBACK mode",
                                 hwAttrs->baseAddr);

        /* Check to see if a callback function was defined for async mode */
        Assert_isTrue(params->transferCallbackFxn != NULL, NULL);

        /* Save the callback function pointer */
        object->transferCallbackFxn = params->transferCallbackFxn;
    }

    SPITivaDMA_initHw(handle, params);

    SSIDMAEnable(hwAttrs->baseAddr, SSI_DMA_TX | SSI_DMA_RX);

    SSIEnable(hwAttrs->baseAddr);

    Log_print1(Diags_USER1, "SPI:(%p) opened", hwAttrs->baseAddr);

    return (handle);
}

bool SPITivaDMA_transfer(SPI_Handle handle, SPI_Transaction *transaction)
{
    unsigned int               key;
    SPITivaDMA_Object         *object = handle->object;
    SPITivaDMA_HWAttrs const  *hwattrs = handle->hwAttrs;

    /* Check the transaction arguments */
    if ((transaction->count == 0) || (transaction->count > 1024) ||
       !(transaction->rxBuf || transaction->txBuf) ||
      (!(transaction->rxBuf && transaction->txBuf) && !hwattrs->scratchBufPtr)) {
        return (false);
    }

    /* Make sure that the buffers are aligned properly */
    if (object->frameSize == SPITivaDMA_16bit) {
        Assert_isTrue(!((uint32_t)transaction->txBuf & 0x1), NULL);
        Assert_isTrue(!((uint32_t)transaction->rxBuf & 0x1), NULL);
    }

    /* Check if a transfer is in progress */
    key = Hwi_disable();
    if (object->transaction) {
        Hwi_restore(key);

        Log_error1("SPI:(%p) transaction still in progress",
                   hwattrs->baseAddr);

        /* Transfer is in progress */
        return (false);
    }
    else {
        /* Save the pointer to the transaction */
        object->transaction = transaction;
    }
    Hwi_restore(key);

    SPITivaDMA_configDMA(handle, transaction);

    if (object->transferMode == SPI_MODE_BLOCKING) {
        Log_print1(Diags_USER1,
                   "SPI:(%p) transfer pending on transferComplete semaphore",
                    hwattrs->baseAddr);

        if (!Semaphore_pend(Semaphore_handle(&(object->transferComplete)),
                            object->transferTimeout)) {

            /*
             * Transfer has timed out.
             * Bring the SPI driver back to a known good state.
             */
            SPITivaDMA_transferCancel(handle);

            return(false);
        }
    }

    return (true);
}

static void SPITivaDMA_transferCallback(SPI_Handle handle,
                                        SPI_Transaction *transaction)
{
    SPITivaDMA_Object         *object = handle->object;

    Log_print1(Diags_USER1, "SPI:(%p) posting transferComplete semaphore",
                ((SPITivaDMA_HWAttrs const *)(handle->hwAttrs))->baseAddr);

    Semaphore_post(Semaphore_handle(&(object->transferComplete)));
}
